@@ -6,6 +6,7 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.058
+installer = MakeMaker
 
 ; this needs to be installed in order for Makefile.PL to be executed
 ; successfully (likely triggered by [TestRunner], via 'dzil test' or 'dzil
@@ -17,3 +18,7 @@ Devel::CheckLib = 0
 Test::Warnings = 0
 
 [Test::CleanNamespaces]
+
+[DynamicPrereqs]
+-raw = $WriteMakefileArgs{PREREQ_PM}{'Dist::Zilla::Plugin::ModuleBuildTiny'} = '0.007'
+-raw = if eval 'use Dist::Zilla::Plugin::ModuleBuildTiny; 1';
