@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
             defined-but-false values are not skipped
           - now also testing interaction with [ModuleBuild],
             [ModuleBuildTiny], and [MakeMaker::Awesome]
+          - Makefile.PL/Build.PL content inserted a little lower in the file
 
 0.001     2014-04-19 08:32:40Z
           - Initial release.
